<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="net.iessochoa.radwaneabdessamie.practica6.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_personajeFragment"
            app:destination="@id/personajeFragment"
            app:launchSingleTop="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favoritos"
        android:name="net.iessochoa.radwaneabdessamie.practica6.ui.favoritos.FavoritosFragment"
        android:label="@string/favoritos"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_favoritos_to_personajeFragment"
            app:destination="@id/personajeFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="net.iessochoa.radwaneabdessamie.practica6.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/personajeFragment"
        android:name="net.iessochoa.radwaneabdessamie.practica6.ui.PersonajeFragment"
        android:label="Personaje"
        tools:layout="@layout/fragment_personaje">
        <argument
            android:name="personaje"
            app:argType="net.iessochoa.radwaneabdessamie.practica6.model.Personaje" />
    </fragment>
</navigation>